syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

import "Grpc/Services/Contracts/Audits/Briefs/audit_brief.proto";

message DocumentTemplateAuditDto {
  AuditBriefDto brief = 1;
}
